# w2-decentralized-recommender-system

./: .gitignore  LICENSE  README.md  nyc_user_map.html  user_clustering_model.pkl
backend/: README.md  api.py  foursquare_api_cache.json  log.md  main.py  nyc_user_map.html  pyproject.toml  tokyo_user_map.html  trained_model.pkl  user_clustering_model.pkl
backend/FedKG/: README.md  colab.ipynb  configs_tuned.json  main.py  plot_training_progress.py  predict.py  preprocessing.py  requirements.txt  split_data.ipynb
backend/FedKG/src/: fedoptimizer.py  models.py  util.py
backend/category_gossip/: trained_model.pkl  user_clustering_model.pkl
backend/category_gossip/src/: evaluator.py  preprocess_data.py  timebased_recommender.py
backend/category_gossip/tools/: create_venue_db.py
backend/data/: foursquare_categories.parquet
backend/simple_model/: main.py  nyc_user_map.html
backend/simple_model/src/: decentralized_recommender.py  user_clustering.py
backend/src/: evaluator.py  extract_data_to_csv.py  preprocess_data.py  timebased_recommender.py  user_clustering.py  visualize_clusters.py  visualize_trajectory.py
backend/statistics/: additional_user_faetures_scaling_results.csv  scaling_results.json  scaling_results_10_usercluster.csv  scaling_results_10percent_usercluster.csv  standard_evaluation.json  system_growth_results.csv  system_growth_results.json  varying_k_scaling_results.csv
backend/tools/: convert_categories.py  create_venue_db.py  plot_hyperparameters.py  plot_scaling.py  plot_system_growth.py  plot_user_scaling.py  run_user_scaling_experiment.py
(+55 files in other folders)
