[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "httpx>=0.24.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
